--- a/po/ru.po
+++ b/po/ru.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: lxfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-10-02 19:35+0200\n"
-"Last-Translator: Alexander <kazancas@gmail.com>\n"
+"PO-Revision-Date: 2012-10-11 01:27+0200\n"
+"Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
 "Language-Team: gnome-cyr\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -43,7 +43,7 @@ msgstr "_Обзор"
 
 #: ../data/ui/app-chooser.glade.h:6
 msgid "_Execute in terminal emulator"
-msgstr "Выполнить в эмуляторе терминала"
+msgstr "_Выполнить в эмуляторе терминала"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -62,11 +62,11 @@ msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:13
 msgid "_Custom Command Line"
-msgstr "Пользовательская команда"
+msgstr "_Пользовательская команда"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Set selected application as default action of this file type"
-msgstr "Установить выбранное приложение по умолчанию для данного типа файла"
+msgstr "_Установить выбранное приложение по умолчанию для данного типа файла"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -909,23 +909,20 @@ msgid "Size"
 msgstr "Размер"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "Права _доступа"
+msgstr "Права доступа"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "Только владелец"
+msgstr "Владелец"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "Изменён"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "Имя/Расположение"
+msgstr "Расположение"
 
 #: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
@@ -1126,9 +1123,8 @@ msgid "Invalid filename %s"
 msgstr "Неверное имя файла %s"
 
 #: ../src/vfs/fm-vfs-menu.c:613
-#, fuzzy
 msgid "Invalid menu directory"
-msgstr "Неверный каталог"
+msgstr "Неверный каталог меню"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
