Commit from LXDE Translation Project with Pootle by user gymka.: 260 of 260 messages translated (0 fuzzy).

--- a/po/lt.po
+++ b/po/lt.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-09-24 08:14+0300\n"
+"PO-Revision-Date: 2012-10-12 07:59+0300\n"
 "Last-Translator: Algimantas Margevičius <margevicius.algimantas@gmail.com>\n"
 "Language-Team: Lietuvių <>\n"
 "Language: lt\n"
@@ -911,23 +911,20 @@ msgid "Size"
 msgstr "Dydis"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "_Leidimai"
+msgstr "Leidimai"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "Tik savininkas"
+msgstr "Savininkas"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "Pakeista"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "Vardas/_Vieta"
+msgstr "Vieta"
 
 #: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
@@ -1129,7 +1126,7 @@ msgstr "Netinkamas failo vardas %s"
 
 #: ../src/vfs/fm-vfs-menu.c:613
 msgid "Invalid menu directory"
-msgstr ""
+msgstr "Netinkamas meniu aplankas"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
