--- a/po/de.po
+++ b/po/de.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: libfm 0.1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-08-15 08:31+0200\n"
-"Last-Translator: Lutz <lthuns@opensuse.org>\n"
+"PO-Revision-Date: 2012-10-12 08:07+0200\n"
+"Last-Translator: Daniel <d@winzen4.de>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,9 +27,8 @@ msgid "<b>File Type To be Opened:</b>"
 msgstr "<b>Dateityp zum Öffnen:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Application"
-msgstr "Installierte Anwendung"
+msgstr "_Installierte Anwendung"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -40,9 +39,8 @@ msgid "_Browse"
 msgstr "_Durchsuchen"
 
 #: ../data/ui/app-chooser.glade.h:6
-#, fuzzy
 msgid "_Execute in terminal emulator"
-msgstr "Im Terminal-Emulator ausführen"
+msgstr "_Im Terminal-Emulator ausführen"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -60,14 +58,12 @@ msgstr ""
 "  <b>%U</b>: URIs mehrerer Dateien"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "_Custom Command Line"
-msgstr "Befehlszeile"
+msgstr "_Benutzerdefinierte Befehlszeile"
 
 #: ../data/ui/app-chooser.glade.h:14
-#, fuzzy
 msgid "_Set selected application as default action of this file type"
-msgstr "Gewählte Anwendung als Vorgabe für diesen Dateityp benutzen"
+msgstr "_Gewählte Anwendung als Vorgabe für diesen Dateityp benutzen"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -101,14 +97,12 @@ msgid "with the following file?"
 msgstr "durch folgende Datei ersetzen?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File Name:"
-msgstr "Dateiname:"
+msgstr "_Dateiname:"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "_Apply this option to all existing files"
-msgstr "Auswahl auf alle Dateien anwenden"
+msgstr "_Auswahl auf alle Dateien anwenden"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "File Properties"
@@ -155,29 +149,24 @@ msgid "_General"
 msgstr "_Allgemein"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>O_wner:</b>"
-msgstr "<b>Besitzer:</b>"
+msgstr "<b>_Besitzer:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>G_roup:</b>"
-msgstr "<b>Gruppe:</b>"
+msgstr "<b>G_ruppe:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>_View content:</b>"
-msgstr "<b>Inhalt anzeigen:</b>"
+msgstr "<b>I_nhalt anzeigen:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>C_hange content:</b>"
-msgstr "<b>Inhalt ändern:</b>"
+msgstr "<b>_Inhalt ändern:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>_Execute:</b>"
-msgstr "<b>Ausführen:</b>"
+msgstr "<b>_Ausführen:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "<b>Special bits:</b>"
@@ -334,7 +323,7 @@ msgstr "Im Terminal ausführen"
 
 #: ../data/ui/filesearch.glade.h:1
 msgid "Bytes"
-msgstr ""
+msgstr "Bytes"
 
 #: ../data/ui/filesearch.glade.h:2 ../src/base/fm-utils.c:88
 msgid "KB"
@@ -350,16 +339,15 @@ msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
 msgid "Choose a date"
-msgstr ""
+msgstr "Ein Datum auswählen"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
-msgstr ""
+msgstr "Ein Datum aus dem folgenden Kalender auswählen"
 
 #: ../data/ui/filesearch.glade.h:7
-#, fuzzy
 msgid "Search Files"
-msgstr "Dateien _sortieren"
+msgstr "Dateien suchen"
 
 #: ../data/ui/filesearch.glade.h:8
 #, fuzzy
@@ -368,7 +356,7 @@ msgstr "<b>Dateityp:</b>"
 
 #: ../data/ui/filesearch.glade.h:9
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -380,57 +368,51 @@ msgstr ""
 
 #: ../data/ui/filesearch.glade.h:12
 msgid "<b>Places to Search</b>"
-msgstr ""
+msgstr "<b>Zu durchsuchende Orte</b>"
 
 #: ../data/ui/filesearch.glade.h:13
 msgid "_Search in sub directories"
-msgstr ""
+msgstr "In _Unterordnern suchen"
 
 #: ../data/ui/filesearch.glade.h:14
 msgid "Search _hidden files"
-msgstr ""
+msgstr "_Versteckte Dateien suchen"
 
 #: ../data/ui/filesearch.glade.h:15
 msgid "Name/_Location"
-msgstr ""
+msgstr "Name/_Ort"
 
 #: ../data/ui/filesearch.glade.h:16
-#, fuzzy
 msgid "<b>File Type</b>"
-msgstr "<b>Dateityp:</b>"
+msgstr "<b>Dateityp</b>"
 
 #: ../data/ui/filesearch.glade.h:17
 msgid "Only search for files of following types"
-msgstr ""
+msgstr "Nur nach Dateien folgender Dateitypen suchen"
 
 #: ../data/ui/filesearch.glade.h:18
-#, fuzzy
 msgid "Te_xt files"
-msgstr "Dateien werden gelöscht"
+msgstr "Te_xtdateien"
 
 #: ../data/ui/filesearch.glade.h:19
-#, fuzzy
 msgid "_Image files"
-msgstr "Dateien werden in den Papierkorb verschoben"
+msgstr "_Bilddateien"
 
 #: ../data/ui/filesearch.glade.h:20
-#, fuzzy
 msgid "_Audio files"
-msgstr "Dateien _sortieren"
+msgstr "_Audiodateien"
 
 #: ../data/ui/filesearch.glade.h:21
-#, fuzzy
 msgid "_Video files"
-msgstr "Dateien _sortieren"
+msgstr "_Videodateien"
 
 #: ../data/ui/filesearch.glade.h:22
 msgid "_Documents"
-msgstr ""
+msgstr "_Dokumente"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "File _Type"
-msgstr "Dateityp"
+msgstr "_Dateityp"
 
 #: ../data/ui/filesearch.glade.h:24
 #, fuzzy
@@ -439,25 +421,23 @@ msgstr "<b>Benutzter Speicherplatz:</b>"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid "C_ontent"
-msgstr ""
+msgstr "In_halt"
 
 #: ../data/ui/filesearch.glade.h:26
-#, fuzzy
 msgid "<b>File Size</b>"
-msgstr "<b>Dateityp:</b>"
+msgstr "<b>Dateigröße</b>"
 
 #: ../data/ui/filesearch.glade.h:27
 msgid "_Smaller than:"
-msgstr ""
+msgstr "Kleiner als:"
 
 #: ../data/ui/filesearch.glade.h:28
 msgid "_Bigger than:"
-msgstr ""
+msgstr "Größer als:"
 
 #: ../data/ui/filesearch.glade.h:29
-#, fuzzy
 msgid "<b>Last Modified Time</b>"
-msgstr "<b>Geändert:</b>"
+msgstr "<b>Zuletzt geändert</b>"
 
 #: ../data/ui/filesearch.glade.h:30 ../src/gtk/fm-gtk-file-launcher.c:531
 #: ../src/gtk/fm-gtk-file-launcher.c:538
@@ -467,16 +447,15 @@ msgstr "Keine"
 
 #: ../data/ui/filesearch.glade.h:31
 msgid "_Earlier than:"
-msgstr ""
+msgstr "_Früher als:"
 
 #: ../data/ui/filesearch.glade.h:32
 msgid "L_ater than:"
-msgstr ""
+msgstr "_Später als:"
 
 #: ../data/ui/filesearch.glade.h:33
-#, fuzzy
 msgid "_Properties"
-msgstr "Dateieigenschaften"
+msgstr "_Eigenschaften"
 
 #: ../src/base/fm-utils.c:80 ../src/base/fm-utils.c:111
 #, c-format
@@ -649,35 +628,28 @@ msgid "Applications"
 msgstr "Anwendungen"
 
 #: ../src/gtk/fm-places-view.c:101
-#, fuzzy
 msgid "_Mount Volume"
-msgstr "Dateisystem einhängen"
+msgstr "Dateisystem _einhängen"
 
 #: ../src/gtk/fm-places-view.c:102
-#, fuzzy
 msgid "_Unmount Volume"
-msgstr "Dateisystem aushängen"
+msgstr "Dateisystem _aushängen"
 
-# besser: Wechseldatenträger?
 #: ../src/gtk/fm-places-view.c:103
-#, fuzzy
 msgid "_Eject Removable Media"
-msgstr "Wechselmedium auswerfen"
+msgstr "_Wechseldatenträger auswerfen"
 
 #: ../src/gtk/fm-places-view.c:116
-#, fuzzy
 msgid "_Rename Bookmark Item"
-msgstr "Lesezeichen umbenennen"
+msgstr "_Lesezeichen umbenennen"
 
 #: ../src/gtk/fm-places-view.c:117
-#, fuzzy
 msgid "Re_move from Bookmark"
-msgstr "Lesezeichen entfernen"
+msgstr "_Lesezeichen entfernen"
 
 #: ../src/gtk/fm-places-view.c:129
-#, fuzzy
 msgid "_Empty Trash Can"
-msgstr "Papierkorb leeren"
+msgstr "_Papierkorb leeren"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:868
@@ -690,22 +662,19 @@ msgstr "Neuen Namen eingeben:"
 
 #: ../src/gtk/fm-side-pane.c:61
 msgid "_Off"
-msgstr ""
+msgstr "_Aus"
 
 #: ../src/gtk/fm-side-pane.c:62
-#, fuzzy
 msgid "_Places"
-msgstr "Orte"
+msgstr "_Orte"
 
 #: ../src/gtk/fm-side-pane.c:63
-#, fuzzy
 msgid "_Directory Tree"
-msgstr "Verzeichnisbaum"
+msgstr "_Verzeichnisbaum"
 
 #: ../src/gtk/fm-side-pane.c:64
-#, fuzzy
 msgid "_Remote"
-msgstr "Entfernt"
+msgstr "_Entfernt"
 
 #: ../src/gtk/fm-side-pane.c:412
 msgid "Places"
@@ -717,43 +686,36 @@ msgstr "Verzeichnisbaum"
 
 #: ../src/gtk/fm-file-menu.c:156
 msgid "_Open"
-msgstr ""
+msgstr "_Öffnen"
 
 #: ../src/gtk/fm-file-menu.c:157 ../src/gtk/fm-file-menu.c:158
-#, fuzzy
 msgid "Open _With..."
-msgstr "Öffnen mit…"
+msgstr "Öffnen _mit…"
 
 #: ../src/gtk/fm-file-menu.c:164
-#, fuzzy
 msgid "Create _Symlink"
-msgstr "Verknüpfung anlegen"
+msgstr "_Verknüpfung anlegen"
 
 #: ../src/gtk/fm-file-menu.c:165
-#, fuzzy
 msgid "Se_nd To"
-msgstr "Senden an"
+msgstr "_Senden an"
 
 #: ../src/gtk/fm-file-menu.c:166
-#, fuzzy
 msgid "Co_mpress..."
-msgstr "Komprimieren…"
+msgstr "_Komprimieren…"
 
 #: ../src/gtk/fm-file-menu.c:167
-#, fuzzy
 msgid "Extract _Here"
-msgstr "Hier entpacken"
+msgstr "_Hier entpacken"
 
 #: ../src/gtk/fm-file-menu.c:168
-#, fuzzy
 msgid "E_xtract To..."
-msgstr "Entpacken nach…"
+msgstr "_Entpacken nach…"
 
 #: ../src/gtk/fm-file-menu.c:169 ../src/gtk/fm-folder-view.c:186
 #: ../src/gtk/fm-folder-view.c:187
-#, fuzzy
 msgid "Prop_erties"
-msgstr "Dateieigenschaften"
+msgstr "_Dateieigenschaften"
 
 #: ../src/gtk/fm-file-menu.c:521
 msgid "_Restore"
@@ -794,12 +756,10 @@ msgid "Blank File"
 msgstr "Leeres MO Medium"
 
 #: ../src/gtk/fm-folder-view.c:172
-#, fuzzy
 msgid "Shortcut"
-msgstr "Verknüpfungen"
+msgstr "Verknüpfung"
 
 #: ../src/gtk/fm-folder-view.c:183
-#, fuzzy
 msgid "_Invert Selection"
 msgstr "Auswahl _umkehren"
 
@@ -808,13 +768,12 @@ msgid "_Sort Files"
 msgstr "Dateien _sortieren"
 
 #: ../src/gtk/fm-folder-view.c:196
-#, fuzzy
 msgid "Show _Hidden"
 msgstr "_Versteckte Dateien anzeigen"
 
 #: ../src/gtk/fm-folder-view.c:197
 msgid "_Only for this folder"
-msgstr ""
+msgstr "_Nur für diesen Ordner"
 
 #: ../src/gtk/fm-folder-view.c:198
 msgid "Check to remember sort as folder setting rather than global one"
@@ -830,24 +789,20 @@ msgid "_Ignore name case"
 msgstr ""
 
 #: ../src/gtk/fm-folder-view.c:211
-#, fuzzy
 msgid "By _Name"
-msgstr "Name"
+msgstr "Nach _Name"
 
 #: ../src/gtk/fm-folder-view.c:212
-#, fuzzy
 msgid "By _Modification Time"
-msgstr "Letzte Än_derung"
+msgstr "Nach letzter Än_derung"
 
 #: ../src/gtk/fm-folder-view.c:213
-#, fuzzy
 msgid "By _Size"
-msgstr "Größe"
+msgstr "Nach Größe"
 
 #: ../src/gtk/fm-folder-view.c:214
-#, fuzzy
 msgid "By File _Type"
-msgstr "Dateityp"
+msgstr "Nach _Dateityp"
 
 #: ../src/gtk/fm-folder-view.c:785
 msgid "Enter a name for the newly created folder:"
@@ -862,18 +817,16 @@ msgid "Create New..."
 msgstr "Neu..."
 
 #: ../src/gtk/fm-folder-view.c:788
-#, fuzzy
 msgid "New"
-msgstr "Netzwerk"
+msgstr "Neu"
 
 #: ../src/gtk/fm-folder-view.c:880
 msgid "Error, lxshortcut not installed"
 msgstr "Fehler, lxshortcut ist nicht installiert"
 
 #: ../src/gtk/fm-folder-view.c:885
-#, fuzzy
 msgid "Failed to start lxshortcut"
-msgstr "Konnte lxshortcut nicht starten"
+msgstr "lxshortcut konnte nicht gestartet werden"
 
 #: ../src/gtk/fm-app-menu-view.c:182
 msgid "Installed Applications"
@@ -937,12 +890,11 @@ msgstr "Die Datei »%s« ist ausführbar. Soll sie ausgeführt werden?"
 #. show error if no paths are added
 #: ../src/gtk/fm-gtk-file-launcher.c:566
 msgid "No folders are specified."
-msgstr ""
+msgstr "Es sind keine Ordner angegeben."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:605
-#, fuzzy
 msgid "Select a folder"
-msgstr "Ordner wählen"
+msgstr "Einen Ordner wählen"
 
 #: ../src/gtk/fm-dir-tree-model.c:418 ../src/gtk/fm-dir-tree-model.c:1204
 msgid "<No Sub Folder>"
@@ -966,23 +918,20 @@ msgid "Size"
 msgstr "Größe"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "_Berechtigungen"
+msgstr "Berechtigungen"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "Nur Besitzer"
+msgstr "Besitzer"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "Geändert"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "<b>Ort:</b>"
+msgstr "Ort"
 
 #: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
@@ -1180,16 +1129,16 @@ msgstr ""
 #: ../src/vfs/fm-vfs-menu.c:552
 #, c-format
 msgid "Invalid filename %s"
-msgstr ""
+msgstr "Ungültiger Dateiname %s"
 
 #: ../src/vfs/fm-vfs-menu.c:613
 msgid "Invalid menu directory"
-msgstr ""
+msgstr "Ungültiger Menüordner"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
 msgid "Search"
-msgstr ""
+msgstr "Suchen"
 
 #~ msgid "<b>_Owner:</b>"
 #~ msgstr "<b>_Besitzer:</b>"
