Commit from LXDE Translation Project with Pootle by user Jalakas.: 260 of 260 messages translated (0 fuzzy).

--- a/po/et.po
+++ b/po/et.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-09-24 22:22+0200\n"
+"PO-Revision-Date: 2012-10-12 10:00+0200\n"
 "Last-Translator: Anari <anari.jalakas@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: et\n"
@@ -907,23 +907,20 @@ msgid "Size"
 msgstr "Suurus"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "Õi_gused"
+msgstr "Õigused"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "Ainult omanik"
+msgstr "Omanik"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "Muudetud"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "Nimi/_asukoht"
+msgstr "Asukoht"
 
 #: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
@@ -1125,7 +1122,7 @@ msgstr "Vigane failinimi %s"
 
 #: ../src/vfs/fm-vfs-menu.c:613
 msgid "Invalid menu directory"
-msgstr ""
+msgstr "Vigane menüükaust"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
